# advent_of_code

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  solve.py  utils.py
2021/: solve.py  utils.py
2021/examples/: answers.txt
2021/puzzle_input/: 9.txt
2021/solvers/: 1.py  10.py  13.py  14.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2022/examples/: answers.txt
2022/solvers/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2023/examples/: answers.txt
2023/solvers/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2024/examples/: answers.txt
2024/puzzle_input/: 28.txt  36.txt  42.txt  44.txt  46.txt  50.txt
2024/solvers/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py
